fix line-wrapping
Somehow the .highlight span is higher than the lines? My fix is ugly.

--- a/css/main.css
+++ b/css/main.css
@@ -169,15 +169,13 @@ h1, h2, .fragment {
     unicode-bidi: bidi-override; /* not inherited through display: block */
     counter-increment: lines;
     display: inline-block;
+    line-height: 1em;
 }
 
 .highlight {
-    height: 1em;
-    display: inline-block;
     color: #c2bfc4;
     background: #685771; /* fallback */
-    background: linear-gradient(to bottom, #000 0%, #000 6%, #685771 6%) 0 0;
-
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 6%, #c2bfc4 6%,  #c2bfc4 12%, #685771 12%) 0 0;
 }
 
 .fixedBreak .line {
